# HarmonyEngine

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.txt  build.sh  package-lock.json  package.json  premake5.lua  run.sh
HarmonyEditor/: CMakeLists.txt  premake5.lua
HarmonyEditor/src/: Application.cpp  Application.h  EditorCamera.cpp  EditorCamera.h  EditorLayer.cpp  EditorLayer.h  EditorScene.cpp  EditorScene.h  HarmonyEditor.cpp  HarmonyEditor.h  ImGuiDefaults.cpp  ImGuiDefaults.h  MenuBar.cpp  MenuBar.h  Project.cpp  Project.h  Settings.cpp  Settings.h  Theme.cpp  Theme.h
HarmonyEditor/src/EditorPanels/: AssetsEditorPanel.cpp  AssetsEditorPanel.h  EditorPanel.h  HierarchyEditorPanel.cpp  HierarchyEditorPanel.h  InspectorEditorPanel.cpp  InspectorEditorPanel.h
HarmonyEditor/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  MenuBarLayer.cpp  MenuBarLayer.h  RenderLayer.cpp  RenderLayer.h
HarmonyEditor/src/Panels/: AssetsEditorPanel.cpp  AssetsEditorPanel.h  ComponentsEditorPanel.cpp  ComponentsEditorPanel.h  DebugPanels.cpp  DebugPanels.h  HierarchyEditorPanel.cpp  HierarchyEditorPanel.h
HarmonyEditor/src/Scenes/: EditorCamera.cpp  EditorCamera.h  EditorScene.cpp  EditorScene.h  GameScene.cpp  GameScene.h
HarmonyEditor/src/Windows/: CommonWindows.cpp  CommonWindows.h
HarmonyEngine/: CMakeLists.txt  premake5.lua
HarmonyEngine/assets/lua/: HarmonyLibrary.lua
HarmonyEngine/assets/objects/TVStudioNewsDesk-3-OBJ/: VirtualTvNewsDesk_3_obj.mtl
HarmonyEngine/assets/shaders/: DefaultShader.frag.glsl  DefaultShader.vert.glsl
HarmonyEngine/debug/: Profile.cpp  Profile.h
HarmonyEngine/src/: Application.cpp  Application.h  HarmonyEngine.h  harmonypch.h  imguipch.h
HarmonyEngine/src/Core/: Application.cpp  Assert.h  Assets.cpp  Assets.h  Core.h  Display.cpp  Display.h  EventSystem.h  Input.cpp  Input.h  Log.cpp  Log.h  Platform.h  Utils.cpp  Utils.h
HarmonyEngine/src/Debug/: Instrumentor.h  Profile.h
HarmonyEngine/src/HarmonyEngine/Core/: Application.cpp  Application.h  Core.h  Display.cpp  Log.h
HarmonyEngine/src/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  RenderLayer.cpp  RenderLayer.h
HarmonyEngine/src/Render/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  MasterRenderer.cpp  MasterRenderer.h  Mesh.h  ObjectLoader.cpp  ObjectLoader.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h
HarmonyEngine/src/Scene/: Component.cpp  Component.h  Entity.h  LuaScript.cpp  LuaScript.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerialization.cpp  SceneSerialization.h
HarmonyEngine/src/include/: HarmonyEngine.h
assets/shaders/: DefaultShader.frag.glsl  DefaultShader.vert.glsl  DefaultShader2D.frag.glsl  DefaultShader2D.vert.glsl  Shader2D.frag.glsl  Shader2D.vert.glsl
src/: Application.cpp  harmonypch.h
src/Core/: Assets.cpp  Assets.h  Display.cpp  Display.h  Input.cpp  Input.h  Log.cpp  Log.h  Utils.h
src/Render/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Scene/: Component.h  GameScene.h  Scene.h  SceneManager.cpp  SceneManager.h  Terrain.h
